feat(challenge_04): :sparkles: creacion de arbol de navidad con ornamento, directamente con 5 estrellas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
         "challenge_02",
-        "challenge_03"
+        "challenge_03",
+        "challenge_04"
     ]
 }
