--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "challenge_02",
         "challenge_03",
         "challenge_04",
-        "challenge_05"
+        "challenge_05",
+        "challenge_06"
     ]
 }
