feat(challenge_07): :sparkles: solucion 4 estrellas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "challenge_03",
         "challenge_04",
         "challenge_05",
-        "challenge_06"
+        "challenge_06",
+        "challenge_07"
     ]
 }
