--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
         "challenge_04",
         "challenge_05",
         "challenge_06",
-        "challenge_07"
+        "challenge_07",
+        "challenge_08",
+        "challenge_09"
     ]
 }
