--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "challenge_06",
         "challenge_07",
         "challenge_08",
-        "challenge_09"
+        "challenge_09",
+        "challenge_10"
     ]
 }
