feat(challenge_16): :sparkles: primera solucion 5 estrellas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "challenge_07",
         "challenge_08",
         "challenge_09",
-        "challenge_10"
+        "challenge_10",
+        "challenge_16"
     ]
 }
