feat(challenge_15): :sparkles: solucion primera 1 estrella

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "challenge_08",
         "challenge_09",
         "challenge_10",
-        "challenge_16"
+        "challenge_16",
+        "challenge_15"
     ]
 }
