feat(challenge_13): :sparkles: solucion primera 2 estrellas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "challenge_09",
         "challenge_10",
         "challenge_16",
-        "challenge_15"
+        "challenge_15",
+        "challenge_13"
     ]
 }
