feat(challenge_17): :art: intento a falta de un test

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
         "challenge_10",
         "challenge_16",
         "challenge_15",
-        "challenge_13"
+        "challenge_13",
+        "challenge_14",
+        "challenge_17"
     ]
 }
