feat(challenge_19): :sparkles: primera solucion 4 estrellas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,8 @@
         "challenge_15",
         "challenge_13",
         "challenge_14",
-        "challenge_17"
+        "challenge_17",
+        "challenge_18",
+        "challenge_19"
     ]
 }
