feat(challenge_20): :sparkles: primera solucion 4 estrellas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "challenge_14",
         "challenge_17",
         "challenge_18",
-        "challenge_19"
+        "challenge_19",
+        "challenge_20"
     ]
 }
