feat(challenge_23): :sparkles: primera solucion 4 estrellas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
         "challenge_17",
         "challenge_18",
         "challenge_19",
-        "challenge_20"
+        "challenge_20",
+        "challenge_23"
     ]
 }
