feat(challenge_22): :sparkles: primera solucion 1 estrella

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "challenge_18",
         "challenge_19",
         "challenge_20",
-        "challenge_23"
+        "challenge_23",
+        "challenge_22"
     ]
 }
