feat(challenge_24): :sparkles: primera solucion 1 estrella

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "challenge_19",
         "challenge_20",
         "challenge_23",
-        "challenge_22"
+        "challenge_22",
+        "challenge_24"
     ]
 }
