feat(challenge_25): :sparkles: primera solucion 5 estrellas

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "challenge_20",
         "challenge_23",
         "challenge_22",
-        "challenge_24"
+        "challenge_24",
+        "challenge_25"
     ]
 }
